--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
+    "@types/multer": "^1.4.5",
     "@types/uuid": "^8.3.0",
+    "csv-parse": "^4.15.4",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
