--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register node_modules/typeorm/cli"
   },
   "dependencies": {
-    "@types/multer": "^1.4.5",
-    "@types/swagger-ui-express": "^4.1.2",
-    "@types/uuid": "^8.3.0",
+    "bcrypt": "^5.0.1",
     "csv-parse": "^4.15.4",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
@@ -22,7 +22,12 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.1",
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/multer": "^1.4.5",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.21.0",
     "eslint": "^7.0.0",
