--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.1",
     "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.1.3",
     "swagger-ui-express": "^4.1.6",
     "tsyringe": "^4.5.0",
     "typeorm": "^0.2.32",
-    "uuid": "^8.3.2",
-    "supertest": "^6.1.3"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.1",
@@ -45,7 +46,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
-   
     "ts-jest": "^26.5.6",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
