--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,7 @@
   "username": "docker",
   "password": "ignite",
   "database": "rentx",
+  "entities": ["./src/modules/**/entities/*.ts"],
   "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
     "migrationsDir": "./src/shared/infra/typeorm/migrations"
