--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,4 +34,17 @@ jobs:
          key: ${{ secrets.SSH_KEY }}
          source: "., !node_modules"
          target: "~/app/rentalx-service"
+         
+      - name: Update API
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          port: ${{ secrets.SSH_PORT }}
+          key: ${{ secrets.SSH_KEY }}
+          script: |
+            cd ~/app/rentalx-service
+            yarn
+            ./node_modules/.bin/typeorm migration:run
+            pm2 restart rentalx-service
       
