--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aws-sdk": "^2.923.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
     "csv-parse": "^4.15.4",
     "dayjs": "^1.10.4",
     "dotenv": "^10.0.0",
@@ -41,6 +42,7 @@
     "@babel/preset-env": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
     "@types/bcrypt": "^3.0.1",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "^8.5.1",
