--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,18 +12,24 @@ services:
       - POSTGRES_PASSWORD=ignite
       - POSTGRES_DB=rentx
     volumes: 
-      - pgdata:/data/postgres   
-  app:
-    build: .
-    container_name: rentx
-    ports: 
-      - 3333:3333
-    volumes: 
-      - .:/usr/app
-    links:
-      - database
-    depends_on: 
-      - database
+      - pgdata:/data/postgres
+
+  redis:
+    image: redis:alpine
+    ports:
+      - 6379:6379
+      
+  # app:
+  #   build: .
+  #   container_name: rentx
+  #   ports: 
+  #     - 3333:3333
+  #   volumes: 
+  #     - .:/usr/app
+  #   links:
+  #     - database
+  #   depends_on: 
+  #     - database
 
 
 volumes:
