--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "seed:admin": "ts-node-dev src/shared/infra/typeorm/seed/admin.ts"
   },
   "dependencies": {
+    "@sentry/node": "^6.7.1",
+    "@sentry/tracing": "^6.7.1",
     "aws-sdk": "^2.923.0",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
